corrected filter count on overview page

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,8 +15,8 @@
     "confirm_overwrite_newer": false,
     
     "host": "209.151.153.31",
-    "user": "agent1",
-    "password": "CrAvV325y2OxGFAl",
+    "user": "agent2",
+    "password": "vszn3SH6S1Azwc3d",
     "port": "2222",
     
     "remote_path": "/www/wp-content/plugins/plugin-optimizer",
